Do not show I-beam when hovering user-select: none

This change was suggested earlier by yoichio,
https://codereview.chromium.org/2021793002 .

Above change was suggested to fix issue 481985.
Issue 481985 got fixed in another way, but this
change is still needed to fix issue 742235.

BUG=742235
TEST=EventHandlerTest.HitOnUserSelectNoneTextDoesNotShowIBeam

Change-Id: I1ed0ad69daf6a1a1bd4b21623fcdb145ef596d88